--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -29,6 +29,8 @@
 		text-transform: lowercase;
 		margin-left: 1.5em;
 		font-size: .9em;
+		list-style: none;
+		line-height: 1.4em;
 
 		&.tab{
 			background: $blue;
@@ -53,6 +55,7 @@
 			margin-top: 3em;
 			margin-left: 2.5em;
 			position: relative;
+			text-transform: uppercase;
 
 			&:hover{
 
