--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -38,6 +38,8 @@
 				background: url('../assets/slider-progress-sprite.png') no-repeat 0 0;
 				height: 14px;
 				width: 14px;
+				margin: 0;
+				padding: 0;
 	
 				&.active{
 					background-position-x: -14px;
@@ -51,13 +53,6 @@
 		border-bottom: 4px solid $red;
 		background-size: cover;
 		@include pie-clearfix;
-	}
-	
-	.content-title{
-		font-family: "Raleway";
-		text-transform: uppercase;
-		font-size: 2.25em;
-		margin-bottom: 1em;
 	}
 	
 	.main-content{
@@ -120,6 +115,12 @@
 				color: #fff;
 				text-decoration: none;
 			}
+
+			li{
+				list-style: none;
+				padding: 0;
+				margin: 0;
+			}
 	
 			.event-title{
 				margin-bottom: 1.5em;
@@ -164,6 +165,8 @@
 			li{
 				float: left;
 				width: 22%;
+				list-style: none;
+				padding: 0;
 				margin: 2em 1.5%;
 			}
 		}
