--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -72,13 +72,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* GLOBAL VARIABLES */
 /* END VARIABLES */
 /* line 9, ../sass/_global.scss */
+img {
+  vertical-align: bottom;
+}
+
+/* line 13, ../sass/_global.scss */
 .wrapper {
   width: 80%;
   max-width: 1180px;
   margin: 0 auto;
 }
 
-/* line 15, ../sass/_global.scss */
+/* line 19, ../sass/_global.scss */
 .button {
   display: inline-block;
   padding: 1.25em 2em;
@@ -93,7 +98,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
 }
-/* line 26, ../sass/_global.scss */
+/* line 30, ../sass/_global.scss */
 .button:after {
   display: inline-block;
   content: '';
@@ -104,13 +109,29 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   position: relative;
   top: 2px;
 }
-/* line 38, ../sass/_global.scss */
+/* line 42, ../sass/_global.scss */
 .button:hover {
   background: #ec1313;
 }
 
+/* line 47, ../sass/_global.scss */
+.float-left {
+  float: left;
+}
+
+/* line 51, ../sass/_global.scss */
+.self-clear {
+  *zoom: 1;
+}
+/* line 38, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.self-clear:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 @media screen and (max-width: 1300px) {
-  /* line 45, ../sass/_global.scss */
+  /* line 57, ../sass/_global.scss */
   .wrapper {
     width: 95%;
   }
@@ -123,27 +144,37 @@ h3 {
 }
 
 /* line 11, ../sass/_fonts.scss */
-p {
+p, dl {
   line-height: 1.4em;
   font-family: "Open Sans";
   font-weight: 300;
 }
 /* line 16, ../sass/_fonts.scss */
-p + p {
+p + p, p + ul, dl + p, dl + ul {
   margin-top: 1.4em;
 }
 
 /* line 21, ../sass/_fonts.scss */
 li {
-  line-height: 1.4em;
+  line-height: 1.8em;
   font-family: "Open Sans";
   font-weight: 300;
-  text-transform: uppercase;
+  list-style: disc;
+  margin-left: 3em;
+  padding-left: .5em;
 }
 
-/* line 28, ../sass/_fonts.scss */
+/* line 30, ../sass/_fonts.scss */
 a {
   color: #396eb6;
+}
+
+/* line 34, ../sass/_fonts.scss */
+.content-title, .page-title {
+  font-family: "Raleway";
+  text-transform: uppercase;
+  font-size: 2.25em;
+  margin-bottom: 1em;
 }
 
 /* line 1, ../sass/_header.scss */
@@ -188,8 +219,10 @@ a {
   text-transform: lowercase;
   margin-left: 1.5em;
   font-size: .9em;
+  list-style: none;
+  line-height: 1.4em;
 }
-/* line 33, ../sass/_header.scss */
+/* line 35, ../sass/_header.scss */
 .utility-nav ul li.tab {
   background: #396eb6;
   padding: 1em 1em .25em;
@@ -200,27 +233,28 @@ a {
   -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
 }
-/* line 40, ../sass/_header.scss */
+/* line 42, ../sass/_header.scss */
 .utility-nav ul li.tab:hover {
   background: #1b69d4;
 }
 
-/* line 48, ../sass/_header.scss */
+/* line 50, ../sass/_header.scss */
 .primary-nav ul {
   float: right;
 }
-/* line 51, ../sass/_header.scss */
+/* line 53, ../sass/_header.scss */
 .primary-nav ul li {
   display: inline-block;
   margin-top: 3em;
   margin-left: 2.5em;
   position: relative;
+  text-transform: uppercase;
 }
-/* line 59, ../sass/_header.scss */
+/* line 62, ../sass/_header.scss */
 .primary-nav ul li:hover .dropdown {
   display: block;
 }
-/* line 64, ../sass/_header.scss */
+/* line 67, ../sass/_header.scss */
 .primary-nav ul .dropdown {
   position: absolute;
   padding: 1em;
@@ -232,19 +266,19 @@ a {
   left: -.75em;
   z-index: 999;
 }
-/* line 76, ../sass/_header.scss */
+/* line 79, ../sass/_header.scss */
 .primary-nav ul .dropdown li {
   color: #333;
   display: block;
   margin: 0;
   position: static;
 }
-/* line 84, ../sass/_header.scss */
+/* line 87, ../sass/_header.scss */
 .primary-nav ul .search-form {
   display: inline-block;
   margin-left: 2.5em;
 }
-/* line 88, ../sass/_header.scss */
+/* line 91, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="text"] {
   border: 1px solid #396eb6;
   padding: 4px;
@@ -252,7 +286,7 @@ a {
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 96, ../sass/_header.scss */
+/* line 99, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="submit"] {
   border: none;
   background: #fff;
@@ -323,12 +357,14 @@ footer .button {
   background: url("../assets/slider-progress-sprite.png") no-repeat 0 0;
   height: 14px;
   width: 14px;
+  margin: 0;
+  padding: 0;
 }
-/* line 42, ../sass/_home.scss */
+/* line 44, ../sass/_home.scss */
 .home .slideshow .slideshow-progress li.active {
   background-position-x: -14px;
 }
-/* line 49, ../sass/_home.scss */
+/* line 51, ../sass/_home.scss */
 .home .content {
   background: #f1f1f1 url("../assets/home-content-bg.png") no-repeat bottom left;
   border-bottom: 4px solid #cc3333;
@@ -341,33 +377,26 @@ footer .button {
   display: table;
   clear: both;
 }
-/* line 56, ../sass/_home.scss */
-.home .content-title {
-  font-family: "Raleway";
-  text-transform: uppercase;
-  font-size: 2.25em;
-  margin-bottom: 1em;
-}
-/* line 63, ../sass/_home.scss */
+/* line 58, ../sass/_home.scss */
 .home .main-content {
   width: 49.322033898305%;
   float: left;
   padding: 2em 8% 2em 2%;
 }
-/* line 68, ../sass/_home.scss */
+/* line 63, ../sass/_home.scss */
 .home .main-content .content-title {
   margin-top: 3.5%;
 }
-/* line 72, ../sass/_home.scss */
+/* line 67, ../sass/_home.scss */
 .home .main-content h2, .home .main-content h3, .home .main-content p {
   color: #153f60;
 }
-/* line 77, ../sass/_home.scss */
+/* line 72, ../sass/_home.scss */
 .home .sidebar-content {
   width: 40.677966101695%;
   float: right;
 }
-/* line 82, ../sass/_home.scss */
+/* line 77, ../sass/_home.scss */
 .home .cutout-overlay {
   margin-top: -5.5em;
   height: 56px;
@@ -375,46 +404,52 @@ footer .button {
   width: 300%;
   margin-left: -184%;
 }
-/* line 90, ../sass/_home.scss */
+/* line 85, ../sass/_home.scss */
 .home .cutout-overlay .button {
   float: right;
 }
-/* line 95, ../sass/_home.scss */
+/* line 90, ../sass/_home.scss */
 .home .events {
   background: #396eb6;
   padding: 5%;
   position: relative;
   color: #fff;
 }
-/* line 101, ../sass/_home.scss */
+/* line 96, ../sass/_home.scss */
 .home .events .event-title {
   text-transform: uppercase;
 }
-/* line 105, ../sass/_home.scss */
+/* line 100, ../sass/_home.scss */
 .home .events .event {
   margin-bottom: 1em;
 }
-/* line 108, ../sass/_home.scss */
+/* line 103, ../sass/_home.scss */
 .home .events .event .button {
   margin-top: 1em;
   position: relative;
   float: right;
   right: -5.5%;
 }
-/* line 116, ../sass/_home.scss */
+/* line 111, ../sass/_home.scss */
 .home .events .more-events {
   margin-top: 6em;
 }
-/* line 119, ../sass/_home.scss */
+/* line 114, ../sass/_home.scss */
 .home .events .more-events a {
   color: #fff;
   text-decoration: none;
 }
-/* line 124, ../sass/_home.scss */
+/* line 119, ../sass/_home.scss */
+.home .events .more-events li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+/* line 125, ../sass/_home.scss */
 .home .events .more-events .event-title {
   margin-bottom: 1.5em;
 }
-/* line 130, ../sass/_home.scss */
+/* line 131, ../sass/_home.scss */
 .home .become-a-member {
   background: #1d2c5e;
   padding: 5% 5% 0;
@@ -422,42 +457,44 @@ footer .button {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 137, ../sass/_home.scss */
+/* line 138, ../sass/_home.scss */
 .home .become-a-member .button {
   margin-top: 1em;
   position: relative;
   float: right;
   right: -5.5%;
 }
-/* line 145, ../sass/_home.scss */
+/* line 146, ../sass/_home.scss */
 .home .sponsors {
   padding: 3em 0;
   overflow: hidden;
   *zoom: 1;
   border-bottom: 4px solid #cc3333;
 }
-/* line 150, ../sass/_home.scss */
+/* line 151, ../sass/_home.scss */
 .home .sponsors .wrapper {
   position: relative;
 }
-/* line 154, ../sass/_home.scss */
+/* line 155, ../sass/_home.scss */
 .home .sponsors .button {
   position: absolute;
   top: 0;
   right: 0;
   margin-top: -1em;
 }
-/* line 161, ../sass/_home.scss */
+/* line 162, ../sass/_home.scss */
 .home .sponsors .logos {
   padding-top: 1em;
 }
-/* line 164, ../sass/_home.scss */
+/* line 165, ../sass/_home.scss */
 .home .sponsors .logos li {
   float: left;
   width: 22%;
+  list-style: none;
+  padding: 0;
   margin: 2em 1.5%;
 }
-/* line 173, ../sass/_home.scss */
+/* line 176, ../sass/_home.scss */
 .home .president {
   padding: 3em 0;
   background: #f1f1f1;
@@ -465,12 +502,167 @@ footer .button {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 179, ../sass/_home.scss */
+/* line 182, ../sass/_home.scss */
 .home .president .president-content {
   float: left;
   padding-right: 8%;
 }
-/* line 184, ../sass/_home.scss */
+/* line 187, ../sass/_home.scss */
 .home .president img {
   float: right;
+}
+
+/* line 1, ../sass/_page.scss */
+.page {
+  background: #e6e7e8;
+}
+/* line 4, ../sass/_page.scss */
+.page .sub-nav {
+  background: #396eb6;
+  color: #fff;
+  width: 20%;
+  position: absolute;
+  right: 10%;
+}
+/* line 11, ../sass/_page.scss */
+.page .sub-nav h3 {
+  margin-top: 1em;
+  margin-left: 1em;
+}
+/* line 16, ../sass/_page.scss */
+.page .sub-nav .button {
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 1em;
+  text-align: center;
+}
+/* line 23, ../sass/_page.scss */
+.page .sub-nav ul {
+  padding: 1em;
+}
+/* line 27, ../sass/_page.scss */
+.page .sub-nav li {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 .5em;
+}
+/* line 34, ../sass/_page.scss */
+.page .promo-image {
+  width: 100%;
+}
+/* line 38, ../sass/_page.scss */
+.page .breadcrumbs {
+  background: #e6e7e8;
+  padding-top: 2em;
+  font-size: .8em;
+  padding-bottom: 4em;
+  font-family: "Open Sans", sans-serif;
+}
+/* line 45, ../sass/_page.scss */
+.page .breadcrumbs a {
+  text-decoration: none;
+}
+/* line 48, ../sass/_page.scss */
+.page .page-title {
+  width: 60%;
+  margin-left: -25%;
+  background: #fff;
+  padding: .5em 0 .5em 25%;
+  margin-bottom: 0;
+}
+/* line 57, ../sass/_page.scss */
+.page .page-section {
+  background: #fff;
+  padding: 2em 0;
+  border-bottom: 4px solid #cc3333;
+}
+/* line 62, ../sass/_page.scss */
+.page .page-section .wrapper {
+  padding-left: 6em;
+}
+/* line 66, ../sass/_page.scss */
+.page .page-section p, .page .page-section ul {
+  width: 60%;
+}
+/* line 70, ../sass/_page.scss */
+.page .page-section.bg-gray {
+  background: #e6e7e8;
+}
+/* line 73, ../sass/_page.scss */
+.page .page-section.full-width p, .page .page-section.full-width ul {
+  width: 90%;
+}
+/* line 80, ../sass/_page.scss */
+.page .profile {
+  *zoom: 1;
+  padding-bottom: 2em;
+}
+/* line 38, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.page .profile:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 85, ../sass/_page.scss */
+.page .profile-card {
+  background: #999;
+  color: #153f60;
+  width: 47%;
+  margin-right: 3%;
+}
+/* line 92, ../sass/_page.scss */
+.page .profile-card img {
+  float: left;
+  width: 50%;
+}
+/* line 97, ../sass/_page.scss */
+.page .profile-card dl {
+  text-align: center;
+  padding-top: 2em;
+}
+/* line 102, ../sass/_page.scss */
+.page .profile-card .position {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+/* line 107, ../sass/_page.scss */
+.page .profile-card .name {
+  border-bottom: 1px dashed #153f60;
+  display: inline-block;
+  padding-bottom: .5em;
+  margin-bottom: .5em;
+}
+/* line 116, ../sass/_page.scss */
+.page .profile-text {
+  padding-left: 50%;
+  width: 50%;
+}
+/* line 121, ../sass/_page.scss */
+.page .profile-stack {
+  float: left;
+  color: #153f60;
+  width: 22%;
+  margin-right: 3%;
+  margin-bottom: 3%;
+}
+/* line 128, ../sass/_page.scss */
+.page .profile-stack img {
+  width: 100%;
+}
+/* line 132, ../sass/_page.scss */
+.page .profile-stack dl {
+  text-align: center;
+}
+/* line 136, ../sass/_page.scss */
+.page .profile-stack .position {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 1em;
+}
+/* line 142, ../sass/_page.scss */
+.page .profile-stack .name {
+  border-bottom: 1px dashed #153f60;
+  display: inline-block;
+  padding-bottom: .5em;
+  margin-bottom: .5em;
 }
