--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ Author URI: http://www.markupshop.com
 Description: Custom wordpress theme built for NCSITE in partnership with Designbox, LLC
 Version: 0.1
 License: This theme is property of NCSITE and is not authorized for duplication or modification without their written consent.
+Text Domain: ncsite
 
 This theme is using compass for CSS pre-processing and management. Reference the "sass" and "stylesheets" folders.
 */
