--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,10 +1,14 @@
 /* GLOBAL VARIABLES */
 
-$dkblue: blue;
+$dkblue: #10244b;
 $blue: #396eb6;
 $red: #cc3333;
 
 /* END VARIABLES */
+
+body{
+	color: $dkblue;
+}
 
 img{
 	vertical-align: bottom;
@@ -12,14 +16,13 @@ img{
 
 .wrapper{
 	width: 80%;
-	max-width: 1180px;
 	margin: 0 auto;
 }
 
-.button{
+button, .button{
 	display: inline-block;
 	padding: 1.25em 2em;
-	background: $red;
+	background: $red!important;
 	color: #fff;
 	text-transform: uppercase;
 	font-family: "Open Sans";
@@ -40,7 +43,7 @@ img{
 	}
 
 	&:hover{
-		background: saturate( $red, 25%);
+		background: saturate( $red, 25%)!important;
 	}
 }
 
@@ -52,10 +55,23 @@ img{
 	@include pie-clearfix;
 }
 
-@media screen and (max-width: 1300px){
+.wpb_row{
+	padding: 2em 30% 2em 10%;
+	margin: 0!important;
+}
+
+.wpb_column{
+	padding: 0 2% 0 0!important;
+}
+
+@media screen and (max-width: 1415px){
 
 	.wrapper{
 		width: 95%;
+	}
+
+	.wpb_row{
+		padding: 2em 25% 2em 5%;
 	}
 
 }
