--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -4,7 +4,7 @@
 	.sub-nav{
 		background: $blue;
 		color: #fff;
-		width: 20%;
+		width: 15%;
 		position: absolute;
 		right: 10%;
 
@@ -30,7 +30,20 @@
 			margin: 0 0 .5em;
 		}
 	}
+	.banner{
+		width: 100%;
+		height: 400px;
+		position: relative;
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
 
+		.banner-filter{
+			width: 100%;
+			height: 100%;
+			background: url('../assets/slideshow-filter.png') repeat;
+		}
+	}
 	.promo-image{
 		width: 100%;
 	}
@@ -42,6 +55,12 @@
 		padding-bottom: 4em;
 		font-family: "Open Sans", sans-serif;
 
+		ul li{
+			list-style: none;
+			display: inline-block;
+			margin: 0 .25em;
+		}
+
 		a{ text-decoration: none; }
 	}
 
@@ -49,8 +68,8 @@
 		width: 60%;
 		margin-left: -25%;
 		background: #fff;
-		padding: .5em 0 .5em 25%;
-		margin-bottom: 0;
+		padding: .5em 0 .5em 35%;
+		margin-bottom: 0!important;
 
 	}
 
@@ -147,4 +166,23 @@
 		}
 	}
 
+	@media screen and (max-width: 1250px){
+
+	.sub-nav{
+		width: 100%;
+		position: static;
+
+		ul li{
+			display: inline-block;
+			width: 15%;
+		}
+
+		.button{
+			display: inline-block; width: 25%;
+		}
+	}
 }
+
+}
+
+
