--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -7,6 +7,7 @@
 @import "compass/utilities";
 @import "compass/css3";
 @import "global";
+//@import "visual-composer-defaults.scss";
 @import "fonts";
 @import "header";
 @import "footer";
