--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import url(http://fonts.googleapis.com/css?family=Raleway:200);
+@import url(http://fonts.googleapis.com/css?family=Raleway:100,200);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:700italic,700,300,600);
 /* line 17, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
@@ -72,22 +72,26 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* GLOBAL VARIABLES */
 /* END VARIABLES */
 /* line 9, ../sass/_global.scss */
+body {
+  color: #10244b;
+}
+
+/* line 13, ../sass/_global.scss */
 img {
   vertical-align: bottom;
 }
 
-/* line 13, ../sass/_global.scss */
+/* line 17, ../sass/_global.scss */
 .wrapper {
   width: 80%;
-  max-width: 1180px;
   margin: 0 auto;
 }
 
-/* line 19, ../sass/_global.scss */
-.button {
+/* line 22, ../sass/_global.scss */
+button, .button {
   display: inline-block;
   padding: 1.25em 2em;
-  background: #cc3333;
+  background: #cc3333 !important;
   color: #fff;
   text-transform: uppercase;
   font-family: "Open Sans";
@@ -98,8 +102,8 @@ img {
   -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
 }
-/* line 30, ../sass/_global.scss */
-.button:after {
+/* line 33, ../sass/_global.scss */
+button:after, .button:after {
   display: inline-block;
   content: '';
   height: 16px;
@@ -109,17 +113,17 @@ img {
   position: relative;
   top: 2px;
 }
-/* line 42, ../sass/_global.scss */
-.button:hover {
-  background: #ec1313;
+/* line 45, ../sass/_global.scss */
+button:hover, .button:hover {
+  background: #ec1313 !important;
 }
 
-/* line 47, ../sass/_global.scss */
+/* line 50, ../sass/_global.scss */
 .float-left {
   float: left;
 }
 
-/* line 51, ../sass/_global.scss */
+/* line 54, ../sass/_global.scss */
 .self-clear {
   *zoom: 1;
 }
@@ -130,31 +134,57 @@ img {
   clear: both;
 }
 
-@media screen and (max-width: 1300px) {
-  /* line 57, ../sass/_global.scss */
+/* line 58, ../sass/_global.scss */
+.wpb_row {
+  padding: 2em 30% 2em 10%;
+  margin: 0 !important;
+}
+
+/* line 63, ../sass/_global.scss */
+.wpb_column {
+  padding: 0 2% 0 0 !important;
+}
+
+@media screen and (max-width: 1415px) {
+  /* line 69, ../sass/_global.scss */
   .wrapper {
     width: 95%;
   }
+
+  /* line 73, ../sass/_global.scss */
+  .wpb_row {
+    padding: 2em 25% 2em 5%;
+  }
 }
-/* line 5, ../sass/_fonts.scss */
+/* line 4, ../sass/_fonts.scss */
+h2 {
+  font-family: "Raleway";
+  line-height: 1.4em;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 2.25em;
+  margin-bottom: 0.5em !important;
+}
+
+/* line 13, ../sass/_fonts.scss */
 h3 {
   font-family: "Open Sans";
   font-weight: 600;
   line-height: 1.4em;
 }
 
-/* line 11, ../sass/_fonts.scss */
+/* line 19, ../sass/_fonts.scss */
 p, dl {
   line-height: 1.4em;
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 16, ../sass/_fonts.scss */
+/* line 24, ../sass/_fonts.scss */
 p + p, p + ul, dl + p, dl + ul {
   margin-top: 1.4em;
 }
 
-/* line 21, ../sass/_fonts.scss */
+/* line 29, ../sass/_fonts.scss */
 li {
   line-height: 1.8em;
   font-family: "Open Sans";
@@ -164,12 +194,25 @@ li {
   padding-left: .5em;
 }
 
-/* line 30, ../sass/_fonts.scss */
+/* line 38, ../sass/_fonts.scss */
 a {
   color: #396eb6;
 }
 
-/* line 34, ../sass/_fonts.scss */
+/* line 42, ../sass/_fonts.scss */
+em {
+  font-style: italic;
+  font-family: georgia, serif;
+  font-weight: 100;
+}
+
+/* line 48, ../sass/_fonts.scss */
+strong {
+  font-weight: bold;
+  font-size: .9em;
+}
+
+/* line 53, ../sass/_fonts.scss */
 .content-title, .page-title {
   font-family: "Raleway";
   text-transform: uppercase;
@@ -238,11 +281,15 @@ a {
   background: #1b69d4;
 }
 
-/* line 50, ../sass/_header.scss */
+/* line 51, ../sass/_header.scss */
+.primary-nav > ul > li {
+  padding-bottom: 1em;
+}
+/* line 55, ../sass/_header.scss */
 .primary-nav ul {
   float: right;
 }
-/* line 53, ../sass/_header.scss */
+/* line 60, ../sass/_header.scss */
 .primary-nav ul li {
   display: inline-block;
   margin-top: 3em;
@@ -250,11 +297,20 @@ a {
   position: relative;
   text-transform: uppercase;
 }
-/* line 62, ../sass/_header.scss */
+/* line 67, ../sass/_header.scss */
+.primary-nav ul li a {
+  color: #10244b;
+  text-decoration: none;
+}
+/* line 71, ../sass/_header.scss */
 .primary-nav ul li:hover .dropdown {
   display: block;
 }
-/* line 67, ../sass/_header.scss */
+/* line 75, ../sass/_header.scss */
+.primary-nav ul li .dropdown:hover {
+  display: block;
+}
+/* line 80, ../sass/_header.scss */
 .primary-nav ul .dropdown {
   position: absolute;
   padding: 1em;
@@ -266,19 +322,19 @@ a {
   left: -.75em;
   z-index: 999;
 }
-/* line 79, ../sass/_header.scss */
+/* line 92, ../sass/_header.scss */
 .primary-nav ul .dropdown li {
   color: #333;
   display: block;
   margin: 0;
   position: static;
 }
-/* line 87, ../sass/_header.scss */
+/* line 100, ../sass/_header.scss */
 .primary-nav ul .search-form {
   display: inline-block;
   margin-left: 2.5em;
 }
-/* line 91, ../sass/_header.scss */
+/* line 104, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="text"] {
   border: 1px solid #396eb6;
   padding: 4px;
@@ -286,7 +342,7 @@ a {
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 99, ../sass/_header.scss */
+/* line 112, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="submit"] {
   border: none;
   background: #fff;
@@ -297,6 +353,30 @@ a {
   font-size: 1em;
 }
 
+@media screen and (max-width: 1200px) {
+  /* line 127, ../sass/_header.scss */
+  .site-title {
+    float: none;
+    margin: 0 auto;
+  }
+
+  /* line 132, ../sass/_header.scss */
+  .primary-nav ul {
+    float: none;
+    margin: 0 auto;
+    text-align: center;
+  }
+  /* line 137, ../sass/_header.scss */
+  .primary-nav ul li {
+    margin-left: 1.5em;
+  }
+}
+@media screen and (max-width: 860px) {
+  /* line 145, ../sass/_header.scss */
+  .primary-nav, .utility-nav {
+    display: none;
+  }
+}
 /* line 1, ../sass/_footer.scss */
 footer {
   background: #535454;
@@ -314,21 +394,25 @@ footer .button {
   margin-top: 2em;
 }
 
-/* line 3, ../sass/_home.scss */
+/* line 1, ../sass/_home.scss */
+.home {
+  overflow: hidden;
+}
+/* line 4, ../sass/_home.scss */
 .home .slideshow {
   background: url("../assets/slider-bg.jpg") no-repeat center;
   background-size: cover;
   overflow: hidden;
   *zoom: 1;
 }
-/* line 8, ../sass/_home.scss */
+/* line 9, ../sass/_home.scss */
 .home .slideshow .slideshow-texture {
   background: url("../assets/slider-texture-bg.png") no-repeat center;
   background-size: cover;
   overflow: hidden;
   *zoom: 1;
 }
-/* line 14, ../sass/_home.scss */
+/* line 15, ../sass/_home.scss */
 .home .slideshow .slideshow-content {
   background: rgba(125, 5, 5, 0.8);
   float: right;
@@ -338,19 +422,20 @@ footer .button {
   position: relative;
   color: #fff;
 }
-/* line 24, ../sass/_home.scss */
+/* line 25, ../sass/_home.scss */
 .home .slideshow .slideshow-title {
   font-family: "Open Sans";
   font-weight: 600;
   margin-bottom: 1em;
+  font-size: 1.4em;
 }
-/* line 30, ../sass/_home.scss */
+/* line 32, ../sass/_home.scss */
 .home .slideshow .slideshow-progress {
   margin-top: -2.5em;
   text-align: center;
   margin-bottom: 1em;
 }
-/* line 35, ../sass/_home.scss */
+/* line 37, ../sass/_home.scss */
 .home .slideshow .slideshow-progress li {
   display: inline-block;
   text-indent: -9999em;
@@ -360,11 +445,11 @@ footer .button {
   margin: 0;
   padding: 0;
 }
-/* line 44, ../sass/_home.scss */
+/* line 46, ../sass/_home.scss */
 .home .slideshow .slideshow-progress li.active {
   background-position-x: -14px;
 }
-/* line 51, ../sass/_home.scss */
+/* line 53, ../sass/_home.scss */
 .home .content {
   background: #f1f1f1 url("../assets/home-content-bg.png") no-repeat bottom left;
   border-bottom: 4px solid #cc3333;
@@ -377,26 +462,26 @@ footer .button {
   display: table;
   clear: both;
 }
-/* line 58, ../sass/_home.scss */
+/* line 60, ../sass/_home.scss */
 .home .main-content {
   width: 49.322033898305%;
   float: left;
   padding: 2em 8% 2em 2%;
 }
-/* line 63, ../sass/_home.scss */
+/* line 65, ../sass/_home.scss */
 .home .main-content .content-title {
   margin-top: 3.5%;
 }
-/* line 67, ../sass/_home.scss */
+/* line 69, ../sass/_home.scss */
 .home .main-content h2, .home .main-content h3, .home .main-content p {
   color: #153f60;
 }
-/* line 72, ../sass/_home.scss */
+/* line 74, ../sass/_home.scss */
 .home .sidebar-content {
   width: 40.677966101695%;
   float: right;
 }
-/* line 77, ../sass/_home.scss */
+/* line 79, ../sass/_home.scss */
 .home .cutout-overlay {
   margin-top: -5.5em;
   height: 56px;
@@ -404,52 +489,52 @@ footer .button {
   width: 300%;
   margin-left: -184%;
 }
-/* line 85, ../sass/_home.scss */
+/* line 87, ../sass/_home.scss */
 .home .cutout-overlay .button {
   float: right;
 }
-/* line 90, ../sass/_home.scss */
+/* line 92, ../sass/_home.scss */
 .home .events {
   background: #396eb6;
   padding: 5%;
   position: relative;
   color: #fff;
 }
-/* line 96, ../sass/_home.scss */
+/* line 98, ../sass/_home.scss */
 .home .events .event-title {
   text-transform: uppercase;
 }
-/* line 100, ../sass/_home.scss */
+/* line 102, ../sass/_home.scss */
 .home .events .event {
   margin-bottom: 1em;
 }
-/* line 103, ../sass/_home.scss */
+/* line 105, ../sass/_home.scss */
 .home .events .event .button {
   margin-top: 1em;
   position: relative;
   float: right;
   right: -5.5%;
 }
-/* line 111, ../sass/_home.scss */
+/* line 113, ../sass/_home.scss */
 .home .events .more-events {
   margin-top: 6em;
 }
-/* line 114, ../sass/_home.scss */
+/* line 116, ../sass/_home.scss */
 .home .events .more-events a {
   color: #fff;
   text-decoration: none;
 }
-/* line 119, ../sass/_home.scss */
+/* line 121, ../sass/_home.scss */
 .home .events .more-events li {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 125, ../sass/_home.scss */
+/* line 127, ../sass/_home.scss */
 .home .events .more-events .event-title {
   margin-bottom: 1.5em;
 }
-/* line 131, ../sass/_home.scss */
+/* line 133, ../sass/_home.scss */
 .home .become-a-member {
   background: #1d2c5e;
   padding: 5% 5% 0;
@@ -457,36 +542,36 @@ footer .button {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 138, ../sass/_home.scss */
+/* line 140, ../sass/_home.scss */
 .home .become-a-member .button {
   margin-top: 1em;
   position: relative;
   float: right;
   right: -5.5%;
 }
-/* line 146, ../sass/_home.scss */
+/* line 148, ../sass/_home.scss */
 .home .sponsors {
   padding: 3em 0;
   overflow: hidden;
   *zoom: 1;
   border-bottom: 4px solid #cc3333;
 }
-/* line 151, ../sass/_home.scss */
+/* line 153, ../sass/_home.scss */
 .home .sponsors .wrapper {
   position: relative;
 }
-/* line 155, ../sass/_home.scss */
+/* line 157, ../sass/_home.scss */
 .home .sponsors .button {
   position: absolute;
   top: 0;
   right: 0;
   margin-top: -1em;
 }
-/* line 162, ../sass/_home.scss */
+/* line 164, ../sass/_home.scss */
 .home .sponsors .logos {
   padding-top: 1em;
 }
-/* line 165, ../sass/_home.scss */
+/* line 167, ../sass/_home.scss */
 .home .sponsors .logos li {
   float: left;
   width: 22%;
@@ -494,7 +579,11 @@ footer .button {
   padding: 0;
   margin: 2em 1.5%;
 }
-/* line 176, ../sass/_home.scss */
+/* line 174, ../sass/_home.scss */
+.home .sponsors .logos li img {
+  width: 100%;
+}
+/* line 180, ../sass/_home.scss */
 .home .president {
   padding: 3em 0;
   background: #f1f1f1;
@@ -502,14 +591,87 @@ footer .button {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 182, ../sass/_home.scss */
+/* line 186, ../sass/_home.scss */
 .home .president .president-content {
-  float: left;
-  padding-right: 8%;
-}
-/* line 187, ../sass/_home.scss */
-.home .president img {
   float: right;
+  width: 85%;
+}
+/* line 191, ../sass/_home.scss */
+.home .president img {
+  float: left;
+  width: 12%;
+  margin-right: 3%;
+}
+@media screen and (max-width: 860px) {
+  /* line 201, ../sass/_home.scss */
+  .home .slideshow {
+    background: #fff;
+  }
+  /* line 204, ../sass/_home.scss */
+  .home .slideshow .slideshow-content {
+    float: none;
+    position: static;
+    width: 110%;
+    margin: 0 0 0 -5%;
+    padding: 4em 2em;
+    box-sizing: border-box;
+    background: #cc3333;
+  }
+  /* line 214, ../sass/_home.scss */
+  .home .slideshow .slideshow-progress {
+    display: none;
+  }
+  /* line 219, ../sass/_home.scss */
+  .home .sidebar-content, .home .main-content {
+    float: none;
+    width: 100%;
+  }
+  /* line 224, ../sass/_home.scss */
+  .home .cutout-overlay {
+    margin: 0 0 2em;
+    width: 100%;
+    height: auto;
+    text-align: right;
+  }
+  /* line 230, ../sass/_home.scss */
+  .home .cutout-overlay .button {
+    float: none;
+  }
+  /* line 234, ../sass/_home.scss */
+  .home .president img {
+    width: 22%;
+  }
+  /* line 238, ../sass/_home.scss */
+  .home .president .president-content {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 600px) {
+  /* line 249, ../sass/_home.scss */
+  .home .sponsors .button {
+    position: static;
+    margin-top: 1em;
+    float: right;
+  }
+}
+@media screen and (max-width: 400px) {
+  /* line 260, ../sass/_home.scss */
+  .home .president img {
+    width: 80%;
+    margin: 0 auto 1em;
+    float: none;
+    display: block;
+  }
+  /* line 267, ../sass/_home.scss */
+  .home .president .president-content {
+    width: 100%;
+    text-align: center;
+  }
+  /* line 274, ../sass/_home.scss */
+  .home .content-title {
+    text-align: center;
+    font-size: 1.75em;
+  }
 }
 
 /* line 1, ../sass/_page.scss */
@@ -520,7 +682,7 @@ footer .button {
 .page .sub-nav {
   background: #396eb6;
   color: #fff;
-  width: 20%;
+  width: 15%;
   position: absolute;
   right: 10%;
 }
@@ -546,11 +708,26 @@ footer .button {
   padding: 0;
   margin: 0 0 .5em;
 }
-/* line 34, ../sass/_page.scss */
+/* line 33, ../sass/_page.scss */
+.page .banner {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+/* line 41, ../sass/_page.scss */
+.page .banner .banner-filter {
+  width: 100%;
+  height: 100%;
+  background: url("../assets/slideshow-filter.png") repeat;
+}
+/* line 47, ../sass/_page.scss */
 .page .promo-image {
   width: 100%;
 }
-/* line 38, ../sass/_page.scss */
+/* line 51, ../sass/_page.scss */
 .page .breadcrumbs {
   background: #e6e7e8;
   padding-top: 2em;
@@ -558,41 +735,47 @@ footer .button {
   padding-bottom: 4em;
   font-family: "Open Sans", sans-serif;
 }
-/* line 45, ../sass/_page.scss */
+/* line 58, ../sass/_page.scss */
+.page .breadcrumbs ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 .25em;
+}
+/* line 64, ../sass/_page.scss */
 .page .breadcrumbs a {
   text-decoration: none;
 }
-/* line 48, ../sass/_page.scss */
+/* line 67, ../sass/_page.scss */
 .page .page-title {
   width: 60%;
   margin-left: -25%;
   background: #fff;
-  padding: .5em 0 .5em 25%;
-  margin-bottom: 0;
+  padding: .5em 0 .5em 35%;
+  margin-bottom: 0 !important;
 }
-/* line 57, ../sass/_page.scss */
+/* line 76, ../sass/_page.scss */
 .page .page-section {
   background: #fff;
   padding: 2em 0;
   border-bottom: 4px solid #cc3333;
 }
-/* line 62, ../sass/_page.scss */
+/* line 81, ../sass/_page.scss */
 .page .page-section .wrapper {
   padding-left: 6em;
 }
-/* line 66, ../sass/_page.scss */
+/* line 85, ../sass/_page.scss */
 .page .page-section p, .page .page-section ul {
   width: 60%;
 }
-/* line 70, ../sass/_page.scss */
+/* line 89, ../sass/_page.scss */
 .page .page-section.bg-gray {
   background: #e6e7e8;
 }
-/* line 73, ../sass/_page.scss */
+/* line 92, ../sass/_page.scss */
 .page .page-section.full-width p, .page .page-section.full-width ul {
   width: 90%;
 }
-/* line 80, ../sass/_page.scss */
+/* line 99, ../sass/_page.scss */
 .page .profile {
   *zoom: 1;
   padding-bottom: 2em;
@@ -603,41 +786,41 @@ footer .button {
   display: table;
   clear: both;
 }
-/* line 85, ../sass/_page.scss */
+/* line 104, ../sass/_page.scss */
 .page .profile-card {
   background: #999;
   color: #153f60;
   width: 47%;
   margin-right: 3%;
 }
-/* line 92, ../sass/_page.scss */
+/* line 111, ../sass/_page.scss */
 .page .profile-card img {
   float: left;
   width: 50%;
 }
-/* line 97, ../sass/_page.scss */
+/* line 116, ../sass/_page.scss */
 .page .profile-card dl {
   text-align: center;
   padding-top: 2em;
 }
-/* line 102, ../sass/_page.scss */
+/* line 121, ../sass/_page.scss */
 .page .profile-card .position {
   text-transform: uppercase;
   font-weight: bold;
 }
-/* line 107, ../sass/_page.scss */
+/* line 126, ../sass/_page.scss */
 .page .profile-card .name {
   border-bottom: 1px dashed #153f60;
   display: inline-block;
   padding-bottom: .5em;
   margin-bottom: .5em;
 }
-/* line 116, ../sass/_page.scss */
+/* line 135, ../sass/_page.scss */
 .page .profile-text {
   padding-left: 50%;
   width: 50%;
 }
-/* line 121, ../sass/_page.scss */
+/* line 140, ../sass/_page.scss */
 .page .profile-stack {
   float: left;
   color: #153f60;
@@ -645,24 +828,41 @@ footer .button {
   margin-right: 3%;
   margin-bottom: 3%;
 }
-/* line 128, ../sass/_page.scss */
+/* line 147, ../sass/_page.scss */
 .page .profile-stack img {
   width: 100%;
 }
-/* line 132, ../sass/_page.scss */
+/* line 151, ../sass/_page.scss */
 .page .profile-stack dl {
   text-align: center;
 }
-/* line 136, ../sass/_page.scss */
+/* line 155, ../sass/_page.scss */
 .page .profile-stack .position {
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 1em;
 }
-/* line 142, ../sass/_page.scss */
+/* line 161, ../sass/_page.scss */
 .page .profile-stack .name {
   border-bottom: 1px dashed #153f60;
   display: inline-block;
   padding-bottom: .5em;
   margin-bottom: .5em;
+}
+@media screen and (max-width: 1250px) {
+  /* line 171, ../sass/_page.scss */
+  .page .sub-nav {
+    width: 100%;
+    position: static;
+  }
+  /* line 175, ../sass/_page.scss */
+  .page .sub-nav ul li {
+    display: inline-block;
+    width: 15%;
+  }
+  /* line 180, ../sass/_page.scss */
+  .page .sub-nav .button {
+    display: inline-block;
+    width: 25%;
+  }
 }
