--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -14,6 +14,17 @@ h3{
 	font-family: "Open Sans";
 	font-weight: 600;
 	line-height: 1.4em;
+	font-size: 1.4em;
+	margin-bottom: 1em;
+}
+
+h4{
+	font-family: "Open Sans";
+	margin: 1em 0 .5em;
+	font-weight: 400;
+	line-height: 1.4em;
+	font-size: 1.2em;
+	text-transform: uppercase;	
 }
 
 p, dl{
