--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -1,17 +1,34 @@
 .page{
 	background: #e6e7e8;
 
+	.article-list{
+
+		article{
+			border-bottom: 1px dashed #aaa;
+			padding-bottom: 2em;
+			margin-bottom: 2em;
+
+			&:last-child{
+				border: none;
+				padding-bottom: 0;
+			}
+		}
+
+	}
+
+	.post-meta{
+		dt +dd{
+			margin-bottom: 1em;
+		
+		}
+	}
+
 	.sub-nav{
 		background: $blue;
 		color: #fff;
 		width: 15%;
 		position: absolute;
 		right: 10%;
-
-		h3{
-			margin-top: 1em;
-			margin-left: 1em;
-		}
 
 		.button{
 			width: 100%;
@@ -20,7 +37,7 @@
 			text-align: center;
 		}
 
-		ul{
+		.links{
 			padding: 1em;
 		}
 
@@ -28,6 +45,15 @@
 			list-style: none;
 			padding: 0;
 			margin: 0 0 .5em;
+
+			a{ 
+				color: #fff; 
+				text-decoration: none;
+
+				&:hover{
+					text-decoration: underline;
+				}
+			}
 		}
 	}
 	.banner{
@@ -49,7 +75,7 @@
 	}
 
 	.breadcrumbs{
-		background: #e6e7e8;
+		background: $gray;
 		padding-top: 2em;
 		font-size: .8em;
 		padding-bottom: 4em;
@@ -66,11 +92,11 @@
 
 	.page-title{
 		width: 60%;
-		margin-left: -25%;
-		background: #fff;
-		padding: .5em 0 .5em 35%;
-		margin-bottom: 0!important;
-
+  		margin-left: -25%;
+  		background: #fff;
+  		padding: 1em 0 0 35%;
+  		margin-top: -1.5em;
+  		margin-bottom: 0!important
 	}
 
 	.page-section{
