--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -902,3 +902,19 @@ footer .button {
     width: 25%;
   }
 }
+
+/* line 1, ../sass/_blog.scss */
+.article-meta {
+  margin-bottom: 1em;
+}
+/* line 4, ../sass/_blog.scss */
+.article-meta h4 {
+  margin: 0;
+}
+/* line 8, ../sass/_blog.scss */
+.article-meta li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-transform: none;
+}
