--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,14 +1,20 @@
 .article-meta{
 	margin-bottom: 1em;
 
-	h4{
+	.article-title{
 		margin: 0;
 	}
 
-	li{
-		list-style: none;
-    	padding: 0;
-    	margin: 0;
-    	text-transform: none;
+	.post-categories{
+
+		li{
+			list-style: none;
+    		padding: 0;
+    		margin: 0;
+    		text-transform: none;
+		}
+
 	}
+
+	
 }
