--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -14,6 +14,26 @@
 			}
 		}
 
+		.article-meta{
+			margin-bottom: 1em;
+
+			.article-title{
+				margin: 0;
+			}
+
+			.post-categories{
+
+				li{
+					list-style: none;
+    				padding: 0;
+    				margin: 0;
+    				text-transform: none;
+				}
+
+			}
+	
+		}
+
 	}
 
 	.post-meta{
