--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -7,6 +7,7 @@
 			border-bottom: 1px dashed #aaa;
 			padding-bottom: 2em;
 			margin-bottom: 2em;
+			background: red;
 
 			&:last-child{
 				border: none;
