--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -27,7 +27,7 @@
     					padding: 0;
     					margin: 0;
     					text-transform: none;
-    					text-size: .8em;
+    					font-size: .8em;
 
     					a{ color: #333; }
 					}
