--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -29,7 +29,7 @@
     					text-transform: none;
     					font-size: .8em;
 
-    					a{ color: #333; }
+    					a{ color: #333; text-decoration: none;}
 					}
 				}
 			}
